--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ temp_experiments/
 gaussian_output/
 gaussian_output_video/
 gaussian_output_dynamic
+generated_data/
 
 
 # Byte-compiled / optimized / DLL files
