removed dgl and fixed other package issues

--- a/env.yaml
+++ b/env.yaml
@@ -18,3 +18,5 @@ dependencies:
     - lxml
     - gdown
     - scikit-optimize
+    - torchdata==0.7.1 # newer version is not compatible with datapipes
+    - pydantic
