--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -7,8 +7,8 @@ dataset:
   # - 'rand_spread': random spreaded object pile
   # - 'rand_sparse_spread': random sparse spreaded object pile
   global_scale: 24
-  n_episode: 2000
-  n_timestep: 80
+  n_episode: 25  # Reduced from 100 for faster testing
+  n_timestep: 81
   obj: "carrots"
   particle_r: 0.125
   cam_idx: 0
@@ -18,14 +18,14 @@ dataset:
   robot_type: 'franka' # kinova; franka
 
 train:
-  data_root: "data/gnn_dyn_data"
+  data_root: "../test/PhysTwin/generated_data"
   random_seed: 42
-  n_epoch: 2000
+  n_epoch: 100  # Reduced from 2000 for faster testing
   lr: 0.001
   adam_beta1: 0.9
-  batch_size: 4
+  batch_size: 8  # Increased for better GPU utilization
   nf_hidden: 64
-  num_workers: 5
+  num_workers: 8 
   train_valid_ratio: 0.9
   log_per_iter: 50
   ckp_per_iter: 1000
@@ -37,7 +37,7 @@ train:
   lr_scheduler:
     type: "StepLR"
     enabled: True
-    step_size: 1000 # epochs
+    step_size: 50 # Reduced step size for shorter training
     gamma: 0.1 # reduce LR by this factor
     factor: 0.1 # ReduceLROnPlateau
     patience: 10 # ReduceLROnPlateau
