--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -19,7 +19,7 @@ dataset:
   randomness: 
     use: True
     state_noise:
-      train: 0.002
+      train: 0.005
       valid: 0.0
 
 train:
@@ -30,7 +30,7 @@ train:
   adam_beta1: 0.9
   batch_size: 64
   nf_hidden: 64
-  num_workers: 16
+  num_workers: 12
   train_valid_ratio: 0.9
   log_per_iter: 50
   ckp_per_iter: 1000
@@ -51,10 +51,10 @@ train:
   particle:
     nf_effect: 64
     resume:
-      active: False
-      epoch: 0
+      active: True
+      epoch: 103
       iter: 0
-      folder: 'None'
+      folder: '2025-06-02-13-06-34-840772'
     adj_thresh: 0.05
     add_delta: False
     connect_tools_all: True  # Connect all tool particles to all object particles regardless of distance
