--- a/configs/real.yaml
+++ b/configs/real.yaml
@@ -26,3 +26,8 @@ collision_dist: 0.02
 collision_learn: true
 chamfer_weight: 1.0
 track_weight: 1.0
+data_generation:
+  offset_dist: 0.2
+  keep_off: 0.05
+  multiplier: 2.0
+  speed: 0.005
