range indexing and no video option in gnn_inference

--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -21,11 +21,12 @@ dataset:
     state_noise:
       train: 0.005
       valid: 0.0
+  downsample_dist: 0.014
 
 train:
   data_root: "../test/PhysTwin/generated_data"
   random_seed: 42
-  n_epoch: 300
+  n_epoch: 500
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 64
@@ -52,9 +53,9 @@ train:
     nf_effect: 64
     resume:
       active: True
-      epoch: 103
+      epoch: 299
       iter: 0
-      folder: '2025-06-02-13-06-34-840772'
+      folder: 'N(0, 0.005) noise'
     adj_thresh: 0.05
     add_delta: False
     connect_tools_all: True  # Connect all tool particles to all object particles regardless of distance
