--- a/env.yaml
+++ b/env.yaml
@@ -7,7 +7,7 @@ dependencies:
     - torch
     - torchvision
     - pybullet
-    - opencv-python
+#    - opencv-python # use conda install -c conda-forge opencv
     - matplotlib
     - gym
     - beautifulsoup4
@@ -20,3 +20,4 @@ dependencies:
     - scikit-optimize
     - torchdata==0.7.1 # newer version is not compatible with datapipes
     - pydantic
+    - h5py
