--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -19,7 +19,7 @@ dataset:
   randomness: 
     use: True
     state_noise:
-      train: 0.001
+      train: 0.0
       valid: 0.0
   downsample_dist: 0.014
 
@@ -52,13 +52,13 @@ train:
   particle:
     nf_effect: 64
     resume:
-      active: true
-      epoch: 199
+      active: false
+      epoch: 0
       iter: 0
-      folder: 'N(0, 0.005) noise (copy)'
+      folder: 
     adj_thresh: 0.05
     add_delta: False
-    connect_tools_all: True  # Connect all tool particles to all object particles regardless of distance
+    connect_tools_all: False  # Connect all tool particles to all object particles regardless of distance
     topk: 10  # Maximum number of neighbors per particle
   lam_reg: 2e-4
   lam_sp: 1e-2
