--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -7,7 +7,7 @@ dataset:
   # - 'rand_spread': random spreaded object pile
   # - 'rand_sparse_spread': random sparse spreaded object pile
   global_scale: 24
-  n_episode: 2000
+  n_episode: 500
   n_timestep: 60
   obj: "carrots"
   particle_r: 0.125
@@ -26,7 +26,7 @@ dataset:
 train:
   data_file: "../PhysTwin/generated_data/less_empty_data.h5"
   random_seed: 42
-  n_epoch: 300
+  n_epoch: 150
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
@@ -42,7 +42,7 @@ train:
   rollout_decay: 1.0
   lr_scheduler:
     type: "ReduceLROnPlateau"
-    enabled: True
+    enabled: False
     step_size: 100 # StepLR
     gamma: 0.1 # StepLR
     factor: 0.2 # ReduceLROnPlateau
@@ -50,20 +50,20 @@ train:
     threshold_mode: 'rel' # ReduceLROnPlateau
     cooldown: 0 # ReduceLROnPlateau
   rollback:
-    enabled: true
+    enabled: False
     patience: 10
     threshold: 1.5
   particle:
     nf_effect: 64
     resume:
-      active: true
-      epoch: 150
+      active: False
+      epoch: 0
       iter: 0
-      folder: "New_baseline"
-    adj_thresh: 0.05
+      folder: 
+    adj_thresh: 0.15
     add_delta: False
     connect_tools_all: False  # Connect all tool particles to all object particles regardless of distance
-    topk: 10  # Maximum number of neighbors per particle
+    topk: 15  # Maximum number of neighbors per particle
   lam_reg: 2e-4
   lam_sp: 1e-2
   fps_radius: 0.02
