--- a/config/train/gnn_dyn.yaml
+++ b/config/train/gnn_dyn.yaml
@@ -7,7 +7,7 @@ dataset:
   # - 'rand_spread': random spreaded object pile
   # - 'rand_sparse_spread': random sparse spreaded object pile
   global_scale: 24
-  n_episode: 500
+  n_episode: 2000
   n_timestep: 60
   obj: "carrots"
   particle_r: 0.125
@@ -26,7 +26,7 @@ dataset:
 train:
   data_file: "../PhysTwin/generated_data/less_empty_data.h5"
   random_seed: 42
-  n_epoch: 150
+  n_epoch: 400
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
@@ -37,12 +37,12 @@ train:
   ckp_per_iter: 1000
   resume_epoch: -1
   resume_iter: -1
-  n_history: 1
-  n_rollout: 5
+  n_history: 4
+  n_rollout: 4
   rollout_decay: 1.0
   lr_scheduler:
     type: "ReduceLROnPlateau"
-    enabled: False
+    enabled: true
     step_size: 100 # StepLR
     gamma: 0.1 # StepLR
     factor: 0.2 # ReduceLROnPlateau
@@ -50,20 +50,20 @@ train:
     threshold_mode: 'rel' # ReduceLROnPlateau
     cooldown: 0 # ReduceLROnPlateau
   rollback:
-    enabled: False
+    enabled: true
     patience: 10
     threshold: 2
   particle:
     nf_effect: 64
     resume:
-      active: False
+      active: false
       epoch: 0
       iter: 0
       folder: 
     adj_thresh: 0.10
     add_delta: False
     connect_tools_all: False  # Connect all tool particles to all object particles regardless of distance
-    topk: 13  # Maximum number of neighbors per particle
+    topk: 15  # Maximum number of neighbors per particle
   lam_reg: 2e-4
   lam_sp: 1e-2
   fps_radius: 0.02
