--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -1,5 +1,5 @@
 dataset:
-  file: "PhysTwin/generated_data/less_empty_data.h5"
+  file: "PhysTwin/generated_data/mixed_push_rope.h5"
   init_pos: 'spread'
   # initialization options:
   # - 'spread': deterministic spreaded object pile
@@ -7,7 +7,7 @@ dataset:
   # - 'rand_spread': random spreaded object pile
   # - 'rand_sparse_spread': random sparse spreaded object pile
   global_scale: 24
-  n_episode: 2000
+  n_episode: 3000
   n_timestep: 60
   obj: "carrots"
   particle_r: 0.125
@@ -25,12 +25,12 @@ dataset:
 
 train:
   random_seed: 42
-  n_epoch: 400
+  n_epoch: 300
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
   nf_hidden: 64
-  num_workers: 12
+  num_workers: 16
   train_valid_ratio: 0.9
   log_per_iter: 350
   ckp_per_iter: 1000
@@ -55,10 +55,10 @@ train:
   particle:
     nf_effect: 64
     resume:
-      active: false
-      epoch: 0
+      active: true
+      epoch: 200
       iter: 0
-      folder: 
+      folder: 'new_data'
     adj_thresh: 0.10
     add_delta: False
     connect_tools_all: False  # Connect all tool particles to all object particles regardless of distance
