--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -34,8 +34,6 @@ train:
   train_valid_ratio: 0.9
   log_per_iter: 350
   ckp_per_iter: 1000
-  resume_epoch: -1
-  resume_iter: -1
   n_history: 4
   n_rollout: 4
   rollout_decay: 1.0
@@ -54,15 +52,19 @@ train:
     threshold: 2
   particle:
     nf_effect: 64
-    resume:
-      active: false
-      epoch: 0
-      iter: 0
-      folder: 
-    adj_thresh: 0.10
-    add_delta: False
-    connect_tools_all: False  # Connect all tool particles to all object particles regardless of distance
-    topk: 15  # Maximum number of neighbors per particle
+    fps_radius: 0.02
+  resume:
+    active: false
+    epoch: 0
+    iter: 0
+    folder:
+  edges:
+    topological: 
+      enabled: True
+      adj_thresh: 0.10
+      topk: 15 
+    collision:  
+      adj_thresh: 0.10
+      topk: 15 
   lam_reg: 2e-4
   lam_sp: 1e-2
-  fps_radius: 0.02
