--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -1,5 +1,5 @@
 dataset:
-  file: "PhysTwin/generated_data/mixed_push_rope.h5"
+  file: "PhysTwin/generated_data/sampled_no_edges.h5"
   init_pos: 'spread'
   # initialization options:
   # - 'spread': deterministic spreaded object pile
@@ -25,7 +25,7 @@ dataset:
 
 train:
   random_seed: 42
-  n_epoch: 300
+  n_epoch: 30
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
@@ -54,17 +54,18 @@ train:
     nf_effect: 64
     fps_radius: 0.02
   resume:
-    active: false
-    epoch: 0
+    active: true
+    epoch: 25
     iter: 0
-    folder:
+    folder: "test_no_edges"
   edges:
     topological: 
-      enabled: True
+      enabled: false
       adj_thresh: 0.10
-      topk: 15 
+      topk: 10
     collision:  
       adj_thresh: 0.10
       topk: 15 
+      connect_tools_all: False
   lam_reg: 2e-4
   lam_sp: 1e-2
