--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -54,7 +54,7 @@ train:
     nf_effect: 64
     fps_radius: 0.02
   resume:
-    active: true
+    active: false
     epoch: 28
     iter: 0
     folder: "test_no_edges"
