--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -19,7 +19,7 @@ dataset:
   randomness: 
     use: False
     state_noise:
-      train: 0.0
+      train: 0.005
       valid: 0.0
   downsample_rate: 3
 
@@ -55,7 +55,7 @@ train:
     nf_effect: 64
     fps_radius: 0.02
   resume:
-    active: true
+    active: false
     epoch: -1
     iter: 0
     folder: "test_mp"
