--- a/GNN/config/mpc/config.yaml
+++ b/GNN/config/mpc/config.yaml
@@ -1,8 +1,9 @@
 data_file: "PhysTwin/generated_data/sampled_with_12_edges.h5"
+action_dim: 3
 planner_type: "MPPI"           # Options: "MPPI", "GD", "MPPI_GD"
 n_sample: 100                  # Number of action trajectories to sample
-n_look_ahead: 10               # Number of steps to look ahead
-n_update_iter: 5               # Number of optimization iterations
+n_look_ahead: 50               # Number of steps to look ahead
+n_update_iter: 10               # Number of optimization iterations
 reward_weight: 10.0            # Temperature parameter for MPPI softmax
 noise_level: 0.05              # Standard deviation for action noise
   
