--- a/GNN/config/mpc/config.yaml
+++ b/GNN/config/mpc/config.yaml
@@ -2,8 +2,8 @@ data_file: "PhysTwin/generated_data/sampled_with_12_edges.h5"
 action_dim: 3
 planner_type: "MPPI"           # Options: "MPPI", "GD", "MPPI_GD"
 n_sample: 100                  # Number of action trajectories to sample
-n_look_ahead: 50               # Number of steps to look ahead
-n_update_iter: 100            # Number of optimization iterations
+n_look_ahead: 50              # Number of steps to look ahead
+n_update_iter: 50            # Number of optimization iterations
 reward_weight: 100.0            # Temperature parameter for MPPI softmax
 noise_level: 0.01              # Standard deviation for action noise
   
@@ -13,7 +13,7 @@ action_upper_bound: 0.05        # Upper bound for robot actions (m)
   
 # Optimization Parameters
 lr: 0.001                      # Learning rate for gradient descent (if using GD)
-verbose: false                 # Enable detailed logging during optimization
+verbose: true                 # Enable detailed logging during optimization
 
 # Reward Function Configuration
-action_weight: 1.0              # Weight for action penalty in reward function
+action_weight: 1              # Weight for action penalty in reward function
