--- a/GNN/config/mpc/config.yaml
+++ b/GNN/config/mpc/config.yaml
@@ -1,5 +1,5 @@
 data_file: "PhysTwin/generated_data/sampled_with_12_edges.h5"
-action_dim: 3
+action_dim: 2
 planner_type: "MPPI"           # Options: "MPPI", "GD", "MPPI_GD"
 n_sample: 100                  # Number of action trajectories to sample
 n_look_ahead: 50              # Number of steps to look ahead
@@ -17,3 +17,4 @@ verbose: true                 # Enable detailed logging during optimization
 
 # Reward Function Configuration
 action_weight: 1              # Weight for action penalty in reward function
+fsp_weight: 1              # Weight for final speed penalty in reward function
