--- a/GNN/config/mpc/config.yaml
+++ b/GNN/config/mpc/config.yaml
@@ -1,4 +1,5 @@
 data_file: "PhysTwin/generated_data/sampled_with_12_edges.h5"
+phystwin_data_file: "PhysTwin/generated_data/mixed_push_rope.h5"
 action_dim: 2
 planner_type: "MPPI"           # Options: "MPPI", "GD", "MPPI_GD"
 n_sample: 100                  # Number of action trajectories to sample
