--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -29,7 +29,7 @@ train:
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
-  nf_hidden: 64
+  nf_hidden: 96
   num_workers: 10
   train_valid_ratio: 0.9
   log_per_iter: 350
@@ -37,6 +37,7 @@ train:
   n_history: 4
   n_rollout: 4
   rollout_decay: 1.0
+  dropout_rate: 0.5
   lr_scheduler:
     type: "ReduceLROnPlateau"
     enabled: true
@@ -52,7 +53,7 @@ train:
     patience: 8
     threshold: 1.7
   particle:
-    nf_effect: 64
+    nf_effect: 96
     fps_radius: 0.02
   resume:
     active: false
