--- a/GNN/config/train/gnn_dyn.yaml
+++ b/GNN/config/train/gnn_dyn.yaml
@@ -29,7 +29,7 @@ train:
   lr: 0.001
   adam_beta1: 0.9
   batch_size: 128
-  nf_hidden: 64
+  nf_hidden: 80
   num_workers: 10
   train_valid_ratio: 0.9
   log_per_iter: 350
@@ -53,10 +53,10 @@ train:
     patience: 8
     threshold: 1.7
   particle:
-    nf_effect: 64
+    nf_effect: 80
     fps_radius: 0.02
   resume:
-    active: true
+    active: false
     epoch: 59
     iter: 0
     folder: "dropout_0.2"
