--- a/GNN/config/mpc/curiosity.yaml
+++ b/GNN/config/mpc/curiosity.yaml
@@ -13,6 +13,7 @@ action_lower_bound: -0.02       # Lower bound for robot actions (m)
 action_upper_bound: 0.02        # Upper bound for robot actions (m)
   
 # Optimization Parameters
+beta: 0.5
 lr: 0.001                      # Learning rate for gradient descent (if using GD)
 verbose: true                 # Enable detailed logging during optimization
 
